# dotfiles

./: .copier-answers.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .install-password-manager.sh  .pre-commit-config.yaml  .tmux.conf  CONTRIBUTING.md  LICENSE  README.md  dot_aider.conf.yml  dot_aider.model.settings.yml  dot_bash_functions  dot_bashenv  dot_bashrc  dot_bashrc-secret-dist  dot_cobra.yaml  dot_gitconfig  dot_profile  dot_sops.yaml  dot_sops.yml  dot_tmux.conf  dot_vimrc  dot_wslconfig  empty_dot_inputrc  run_onchange_install-packages.sh  run_onchange_install-packages.sh.tmpl  run_onchange_wsl_conf.sh  run_onchange_wsl_config.sh  run_onchange_wsl_git.sh
.github/: CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md
agent/: bash.md
bin-local/: README.md  executable_aider  executable_chezmoi-apply-clean  executable_claude-api-key-helper  executable_pass
dot_bashenv.d/: ans-x.sh  kube.sh  pass.sh  ssh-x.sh
dot_bashrc.d/: ans-x.sh  ansible.sh  ask.sh  bashlib.sh  bin.sh  cat.sh  cd  cd.sh  chezmoi.sh  cmctl.sh  code.sh  command.sh  direnv.sh  dnscontrol.sh  dock-x.sh  dockenv.sh  echo  echo.sh  error.sh  error_handling  error_handling.sh  fzf.sh  git  git.sh  git_helpers.sh  go.sh  gpg.sh  homebrew.sh  interaction  interaction.sh  jreleaser.sh  kube.sh  ls  ls.sh  mv.sh  neovim.sh  nix.sh  nodejs  nodejs.sh  npm.sh  (+16 more)
dot_claude/: CLAUDE.md  README.md  (+2 more)
dot_claude/skills/transcript-downloader/scripts/: .gitignore  README.md  executable_transcript-downloader.py  pyproject.toml  requirements.txt  transcript-downloader.py  transcript_downloader.py
(+49 files in other folders)
